deploy: 9ecc5ef79ef7df5901816ef7e7ef3bfc19dc8846

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 		<script>
 			const _location = window.location
 			const path = location.href.substr(_location.origin.length+1)
-			const url = `${origin}/?p=${encodeURIComponent(path)}}`
+			const url = `${origin}/?p=${encodeURIComponent(path)}`
 			_location.replace(url)
 		</script>
 	</head>
